--- a/src/App.css
+++ b/src/App.css
@@ -18,5 +18,16 @@
 }
 
 .App-link {
-  color: #09d3ac;
+  color: rgb(255, 170, 59);
+}
+.btn-primary {
+  background-color: #ff9f00;
+  border-color: #ff9f00;
+  color: #ffffff;
+}
+
+.btn-primary:hover {
+  background-color: #000000;
+  border-color: #000000;
+  color: #ffffff;
 }
