--- a/src/index.css
+++ b/src/index.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 body {
-  background: #1C8EF9 !important;
+  background: rgb(255, 170, 59) !important;
   min-height: 100vh;
   display: flex;
   font-weight: 400;
@@ -26,6 +26,10 @@ body, html, .App, #root, .auth-wrapper {
   box-shadow: 0px 14px 80px rgba(34, 35, 58, 0.2);
 }
 
+.navbar-brand {
+  width: 100%
+}
+
 .auth-wrapper {
   display: flex;
   justify-content: center;
@@ -44,7 +48,7 @@ body, html, .App, #root, .auth-wrapper {
 }
 
 .auth-wrapper .form-control:focus {
-  border-color: #167bff;
+  border-color: rgb(255, 170, 59);
   box-shadow: none;
 }
 
@@ -69,5 +73,9 @@ body, html, .App, #root, .auth-wrapper {
 }
 
 .forgot-password a {
-  color: #167bff;
+  color: rgb(255, 170, 59);
+}
+
+.forgot-password a:hover {
+  color: #000000;
 }
